# knux-rs

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  clippy-sarif.yml  coverage.yml  deny.yml  scorecard.yml
badges/: coverage.json
src/: lib.rs  param.rs  runtime_ext.rs  type_helpers.rs  utils.rs
src/__tests__/: utils.rs
src/executor/: config.rs  error.rs  mod.rs  transaction.rs  transaction_utils.rs  utils.rs
src/executor/__tests__/: config.rs  delete.rs  executor.rs  insert.rs  mod.rs  parallel.rs  transaction.rs  transaction_utils.rs  update.rs
src/expression/: aggr.rs  alias.rs  cmp.rs  helpers.rs  join_on.rs  logic.rs  math.rs  mod.rs  path.rs
src/expression/__tests__/: aggr.rs  alias.rs  cmp.rs  expr.rs  helpers.rs  join_on.rs  join_on_ext.rs  logic.rs  math.rs  mod.rs  on_builder.rs  path.rs
src/optimizer/: config.rs  dedup_in_list.rs  flatten_simple_subqueries.rs  in_to_exists.rs  mod.rs  passes.rs  predicate_pullup.rs  predicate_pushdown.rs  rm_subquery_order_by.rs  simplify_exists.rs  utils.rs
src/optimizer/__tests__/: dedup_in_list.rs  flatten_simple_subqueries.rs  in_to_exists.rs  mod.rs  passes.rs  predicate_pullup.rs  predicate_pushdown.rs  rm_subquery_order_by.rs  (+2 more)
src/query_builder/: alias.rs  args.rs  ast.rs  clear.rs  distinct.rs  error.rs  exec_ctx.rs  from.rs  group_by.rs  insert.rs  limit.rs  mod.rs  order_by.rs  schema.rs  select.rs  sql.rs  union.rs  utils.rs  with.rs
src/renderer/: ast.rs  config.rs  delete.rs  error.rs  ident.rs  insert.rs  map.rs  mod.rs  select.rs  update.rs  validate.rs  writer.rs
src/tests/: dialect_test_helpers.rs  mod.rs
(+125 files in other folders)
